# canary-qwen-2.5b

./: README.md
srtforge-platinum/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
srtforge-platinum/.github/workflows/: ci.yml
srtforge-platinum/configs/: default.yaml  keywords.sample.txt
srtforge-platinum/docker/: Dockerfile.cpu  Dockerfile.cuda
srtforge-platinum/scripts/: build_sctk.sh  setup_env.ps1  verify_binaries.sh
srtforge-platinum/src/srtforge/: __init__.py  cli.py  config.py  logging.py
srtforge-platinum/src/srtforge/align/: __init__.py  mfa.py
srtforge-platinum/src/srtforge/asr/: __init__.py  canary_salm.py  ctm.py  parakeet.py
srtforge-platinum/src/srtforge/audio/: __init__.py  extract.py  preprocess.py  separate.py
srtforge-platinum/src/srtforge/combine/: __init__.py  rover.py
srtforge-platinum/src/srtforge/segment/: __init__.py  chunker.py  vad.py
srtforge-platinum/src/srtforge/srt/: __init__.py  readability.py  writer.py
srtforge-platinum/src/srtforge/utils/: __init__.py  ffmpeg.py  text.py  timing.py
srtforge-platinum/src/yaml/: __init__.py
srtforge-platinum/tests/: conftest.py  test_audio_extract.py  test_ctm.py  test_layout_probe.py  test_mfa_wrapper.py  test_pipeline_behaviour.py  test_preprocess_filters.py  test_prompt_budget.py  test_rover_per_chunk.py  test_vad_parse.py  test_wrap.py
