[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srtforge-platinum"
version = "0.1.0"
description = "Offline-first subtitle generator blending Canary SALM and Parakeet ASR"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "srtforge maintainers", email = "opensource@srtforge.dev" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "torch>=2.1.0",
  "nemo_toolkit[asr]>=1.23.0",
]

[project.optional-dependencies]
dev = [
  "black>=23.9",
  "flake8>=6.1",
  "mypy>=1.6",
  "pytest>=7.4",
  "types-PyYAML",
]

[project.scripts]
srtforge = "srtforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
strict = true

